mongoexpress-mongodb/templates/mongoexpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  labels:
    app: mongo-express-service
spec:
  type: LoadBalancer
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    nodePort: 30000
  selector:
    app: mongo-express
